[tool.poetry]
name = "NaniBrokenCI"
version = "0.1.0"
description = ""
authors = ["Benji81 <benji81@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
python-vlc = "^3.0"
python-gitlab = "^2.5.0"


[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
bandit = "^1.6.2"
coverage = "^5.0.3"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pre-commit = "^2.2.0"
black = "^19.10b0"
flake8 = "^3.8.3"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
factory_boy = "^3.0.1"
ipdb = "^0.13.3"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
    | migrations
    | \.vscode
    | \.run
    | snapshots
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
lines_after_imports = 2
force_sort_within_sections = true
sections = '''
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    TESTS
    LOCALFOLDER
'''
known_tests = "tests"
skip = '''
    manage.py
    scripts
    staticassets
    docs/conf.py
'''

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

